--- a/assets/style.css
+++ b/assets/style.css
@@ -83,7 +83,7 @@
 /*Letters Display*/
 #letters-display {
     color: white;
-    padding: 2rem;
+    padding: 2rem 3rem;
     font-size: 4rem;
     font-family: 'Gochi Hand', cursive;
     top: 70%;
